--- a/drawingboard/test.html
+++ b/drawingboard/test.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <div id="errMsg" class="wrong_list_inner">
         <div class="wrong_item">
-            <i class="serial_number fn-left">18</i>
+            <i class="serial_number fn-left" value="18">18</i>
             <div class="wrong_content fn-clear">
                 <div class="wrong_label fn-left">粗心大意</div>
                 <div class="wrong_label fn-left">运用错误</div>
@@ -19,7 +19,15 @@
             </div>
         </div>
         <div class="wrong_item">
-            <i class="serial_number fn-left">1</i>
+            <i class="serial_number fn-left" value="999">1</i>
+            <div class="wrong_content fn-clear">
+                <div class="wrong_label fn-left">999</div>
+                <div class="wrong_label fn-left">审题不清</div>
+                <div class="wrong_label fn-left">基础不牢</div>
+            </div>
+        </div>
+        <div class="wrong_item">
+            <i class="serial_number fn-left" value="660">1</i>
             <div class="wrong_content fn-clear">
                 <div class="wrong_label fn-left">222</div>
                 <div class="wrong_label fn-left">审题不清</div>
@@ -30,7 +38,7 @@
     </div>
 
     <script>
-        var txtCt = jQuery('#errMsg').find('.wrong_item > i:eq(1)').siblings().find('div');
+        var txtCt = jQuery('#errMsg').find('.wrong_item > i[value="999"]').siblings().find('div');
         txtCt.text(function (index, text) { return text + ","; });
         console.log(txtCt.text());
         txtCt.text(function (index, text) { return text.replace(",", ""); });
