--- a/drawingboard/test.html
+++ b/drawingboard/test.html
@@ -9,33 +9,9 @@
 <body>
 
     <script type="text/javascript" src="../js/jquery.min.js"></script>
-    <div id="errMsg" class="wrong_list_inner">
-        <div class="wrong_item">
-            <i class="serial_number fn-left" value="18">18</i>
-            <div class="wrong_content fn-clear">
-                <div class="wrong_label fn-left">粗心大意</div>
-                <div class="wrong_label fn-left">运用错误</div>
-                <div class="wrong_label fn-left">区分错误</div>
-            </div>
-        </div>
-        <div class="wrong_item">
-            <i class="serial_number fn-left" value="999">1</i>
-            <div class="wrong_content fn-clear">
-                <div class="wrong_label fn-left">999</div>
-                <div class="wrong_label fn-left">审题不清</div>
-                <div class="wrong_label fn-left">基础不牢</div>
-            </div>
-        </div>
-        <div class="wrong_item">
-            <i class="serial_number fn-left" value="660">1</i>
-            <div class="wrong_content fn-clear">
-                <div class="wrong_label fn-left">222</div>
-                <div class="wrong_label fn-left">审题不清</div>
-                <div class="wrong_label fn-left">基础不牢</div>
-            </div>
-        </div>
+    <script type="text/javascript" src="../js/check/qiniu.min.js"></script>
 
-    </div>
+    <button>提交</button>
 
     <script>
         var txtCt = jQuery('#errMsg').find('.wrong_item > i[value="999"]').siblings().find('div');
