上传七牛方式优化

--- a/drawingboard/check.html
+++ b/drawingboard/check.html
@@ -390,7 +390,7 @@
                     }
                 }
 
-                //TODO:上传图片
+                // //TODO:上传图片(暂时屏蔽)
                 // uploadImg(uploadImageArray, qiniuToken);
 
                 // //提交数据
