--- a/drawingboard/check.html
+++ b/drawingboard/check.html
@@ -124,8 +124,8 @@
 
             </div>
             <div class="homework_total center-self-x">
-                <span>1</span>/
-                <span>5</span>
+                <span id="currentNum">1</span>/
+                <span id="sumNum">1</span>
             </div>
         </div>
         <div class="view">
@@ -134,6 +134,7 @@
         </div>
     </div>
     <div id="errModal" class="mark_error_modal fn-hide">
+        <div class="top"></div>
         <div class="mark_error_box center-self">
             <div class="mark_error_box_title">
                 <div class="fn-left">
@@ -181,6 +182,7 @@
             alert("网络错误");
         }
         img = JSON.parse(img);
+        jQuery('#sumNum').text(img.length);
         var simgEle = "";
         for (var i = 0; i < img.length; i++) {
             if (i == 0) {
@@ -205,6 +207,7 @@
             }
             jQuery(this).addClass("active-nav").siblings().removeClass("active-nav");
             switchCanvas(img[_index].i, _index);
+            jQuery("#currentNum").text(1 + _index);
         });
 
         //隐藏弹窗
@@ -270,7 +273,7 @@
             type: "GET",
             cache: false,
             dataType: "jsonp",
-            url: 'http://127.0.0.1:8360/qiniu/gettoken',
+            url: 'http://172.16.10.79:8360/qiniu/gettoken',
             data: {},
             success: function (res) {
                 qiniuToken = res.token;
